Env var settings, server side tab persistence
